Added discussion of data store classifications to results

--- a/paper/bib/bitcoin.bib
+++ b/paper/bib/bitcoin.bib
@@ -1169,4 +1169,15 @@ Scalable off-chain instant payments},
   lastchecked   = {04/02/2018},
 }
 
+@Misc{CT,
+  author       = {Google},
+  title        = {What is {Certificate} {Transparency}? - {Certificate} {Transparency}},
+  howpublished = {Retrieved August 15, 2018},
+  url          = {http://www.certificate-transparency.org/what-is-ct},
+  urldate      = {2018-08-15},
+  abstract     = {This site describes the Certificate Transparency effort being spearheaded by Ben Laurie, Adam Langley and Stephen McHenry. The effort is designed to significantly increase the security of the Public Key Infrastructure used by web sites and services.},
+  file         = {Snapshot:C\:\\Users\\benja\\Zotero\\storage\\FD4Y8HP8\\what-is-ct.html:text/html},
+  shorttitle   = {What is {Certificate} {Transparency}?},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
