Updates to taxonomy

--- a/paper/sections/related-works.tex
+++ b/paper/sections/related-works.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../main.tex
 
-\section{Related Works (Ben))}
+\section{Related Works}
 Several prior authors have surveyed and systematized different aspects of the Blockchain landscape.
 One of the most comprehensive works is from Bonneau et al., focusing on Bitcoin and other cryptocurrencies~\cite{BMC+15}. The authors seek to understand how Bitcoin has worked successfully and securely in practice for several years despite the lack of a rigorous model for its correctness and security. %From a host of disparate sources, they distill a clear technical overview of how Bitcoin works. They then systematize the properties sufficient for system stability and analyze how they hold up under different assumptions about the incentives for miners. Finally, they evaluate and compare proposed changes to Bitcoin including tweaks to system parameters, alternative consensus protocols, and improvements to privacy and anonymity and conclude with a discussion of additional functionalities that Bitcoin could be extended to provide.  
 Their approach differs from ours in several key ways, reflecting that our analyses have fundamentally different goals. They focus on a single application of Blockchain technology and survey technical sources in order to analyze how those systems work and how design changes might affect functionality. By instead surveying sources that analyze Blockchain, we systematize the collective knowledge of the community to understand how Blockchain is being thought about and used by practitioners. This approach allows us to reason about how Blockchain may be useful in novel scenarios and to separate out normative beliefs from technical ones. 
