--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -58,6 +58,8 @@ This shows that Blockchain's significant novel utility is more firmly rooted in 
 
 \subsection{Classifying Blockchain \bnote{In Progress}}
 
+Our grounded theory analysis revealed that the key properties of a blockchain are decentralized governance, auditability, and resilience. To understand how Blockchain relates to other types of data stores, we organized these properties into a series of classifying questions. Figure~\ref{fig:blockchainFlowchart} shows the results.
+
 \begin{figure*}
 	\centering
 	\includegraphics[width=\textwidth]{figures/BlockchainFlowchart.png}
@@ -65,11 +67,11 @@ This shows that Blockchain's significant novel utility is more firmly rooted in 
 	\label{fig:blockchainFlowchart}
 \end{figure*}
 
-Using four classifying questions, Figure~\ref{fig:blockchainFlowchart} defines different types of data stores and shows how Blockchain fits in. The first question is about who has the authority to manage and update the database: \emph{what is the governance model?} In a centrally governed database (a), a single entity performs these tasks. Alternatively, the system can use a consensus protocol such as Byzantine Agreement to allow for decentralized governance (b).
+The first question is about who has the authority to manage and update the database: \emph{what is the governance model?} In a centrally governed database (a), a single entity performs these tasks. Alternatively, the system can use a consensus protocol such as Byzantine Agreement to allow for decentralized governance (b).
 
-Next, we consider the security model by asking \emph{where is the root of trust?} This refers to the entity or entities that must behave honestly in order for the system to be secure. In database systems, trust can either be rooted in the maintainer (e.g., a cloud storage provider) or it can be based on the design of the system itself (e.g., allowing user audits to ensure correct operation). For a centralized database to avoid trusting a maintainer, it must be possible for observers to verifiably reconstruct the current state of the data from the historical records of changes. We refer to such a system as a monitored historical ledger (d). Alternatively, a decentralized data store with no trusted maintainer is a blockchain (f), albeit one that is centrally stored (i.e., not replicated). The only distinction between a blockchain and a monitored historical ledger is decentralized governance.
+Next, we consider the security model by asking \emph{where is the root of trust?} This refers to the entity or entities that must behave honestly in order for the system to be secure. In database systems, trust can either be rooted in the maintainer (e.g., a cloud storage provider) or it can be built into the design of the system itself (e.g., allowing user audits to ensure correct operation). For a centralized database to avoid trusting a maintainer, it must be possible for observers to verifiably reconstruct the current state of the data from the historical records of changes. We refer to such a system as a monitored historical ledger (d). Alternatively, a decentralized data store with no trusted maintainer is a blockchain (f), albeit one that is centrally stored (i.e., not replicated). 
 
-In order for a system to be its own root of trust, data must be auditable back to its origin. However, for databases that rely on trusted maintainers, there are two possible ways for data to be verified by observers, and the next question deals with this: \emph{what is auditable?} If a centralized database with a trusted maintainer permits auditing of the current state, it is a monitored database (g), a good example of which is Google's Certificate Transparency project~\cite{CT}. If the data can be verified back to its origin using provenance, it's a monitored historical ledger as defined previously. A decentralized database has the same two options: if only current state is auditable, the system is a monitored database with consensus (h), but if provenance is available so that data can be audited back to its origin, it is a blockchain (f).
+In order for a system to be its own root of trust, stored data must be auditable back to its origin. However, for databases that rely on trusted maintainers, there are two possible ways for data to be verified by observers, and the next question deals with this: \emph{what is auditable?} If a centralized database with a trusted maintainer permits auditing of the current state, it is a monitored database (g), a good example of which is Google's Certificate Transparency project~\cite{CT}. If the data can be verified back to its origin using provenance, it's a monitored historical ledger as defined previously. A decentralized database has the same two options: if only current state is auditable, the system is a monitored database with consensus (h), but if provenance is available so that data can be audited back to its origin, it is a blockchain (f).
 
 Finally, a database can have resilience properties depending on its design, so we ask \emph{what is it resilient against?} To prevent or recover from data loss or unauthorized modification, data can be replicated across multiple storage locations. The simplest case is a replicated database (i), but if the system also permits monitoring, replication also provides resilience to state rollback. We call this a replicated monitored database (j).
 \bnote{Need to discuss the last column of this figure with Scott. How does DoS fit in, and how does the back edge from (g) to (d) provide resilience to data loss if the data isn't replicated?}
