updates to taxonomy following conversation with Scott

--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -69,12 +69,18 @@ Our grounded theory analysis revealed that the key properties of a blockchain ar
 
 The first question is about who has the authority to manage and update the database: \emph{what is the governance model?} In a centrally governed database (a), a single entity performs these tasks. Alternatively, the system can use a consensus protocol such as Byzantine Agreement to allow for decentralized governance (b).
 
-Next, we consider the security model by asking \emph{where is the root of trust?} This refers to the entity or entities that must behave honestly in order for the system to be secure. In database systems, trust can either be rooted in the maintainer (e.g., a cloud storage provider) or it can be built into the design of the system itself (e.g., allowing user audits to ensure correct operation). For a centralized database to avoid trusting a maintainer, it must be possible for observers to verifiably reconstruct the current state of the data from the historical records of changes. We refer to such a system as a monitored historical ledger (d). Alternatively, a decentralized data store with no trusted maintainer is a blockchain (f), albeit one that is centrally stored (i.e., not replicated). 
+Next, we consider the security model by asking \emph{where is the root of trust?} This refers to the entity or entities that must behave honestly in order for the system to be secure. In typical database systems, trust is rooted in the maintainer -- for example, using AWS cloud storage requires that you trust Amazon. Alternatively, trust can be rooted in the design of the system itself. This is only possible if the system stores the provenance, or history, of the data in a verifiable way (e.g., as a hash chain or other authenticated data structure). Then auditors can confirm that data has not been manipulated by the maintainer or someone else. If this system is governed centrally, it is a monitored ledger (d), a good example of which is Google's Certificate Transparency project~\cite{CT}. If the system is decentralized, it is a historical ledger with consensus (f), where auditors can affirm that all changes to the data were made with valid consensus. To our knowledge, no such system exists, but it could be useful in some settings, such as publicly auditable committee votes. 
 
-In order for a system to be its own root of trust, stored data must be auditable back to its origin. However, for databases that rely on trusted maintainers, there are two possible ways for data to be verified by observers, and the next question deals with this: \emph{what is auditable?} If a centralized database with a trusted maintainer permits auditing of the current state, it is a monitored database (g), a good example of which is Google's Certificate Transparency project~\cite{CT}. If the data can be verified back to its origin using provenance, it's a monitored historical ledger as defined previously. A decentralized database has the same two options: if only current state is auditable, the system is a monitored database with consensus (h), but if provenance is available so that data can be audited back to its origin, it is a blockchain (f).
+The next question is \emph{what is auditable?} If the system does not provide verifiable provenance, it can at least allow for verification of the current state. A simple way to do this is to publish a digitally signed hash of the full data store after each change. After each update, auditors will be able to verify that it was made by an authorized entity (the maintainer or the consensus group), but they cannot verify that the data has only been modified by authorized entities since its inception or that consensus has always been obeyed. Some software distribution repositories work this way, publishing a signed hash or checksum along with code updates. This system can be a centralized monitored database (c) or be run by decentralized consensus (e)\footnote{
+	We omit the possibility of a consensus-based data store with no auditability because in a decentralized system, at a minimum consensus partners must be able to verify that state changes are made by consensus or the system cannot be trusted at all.
+}. 
 
-Finally, a database can have resilience properties depending on its design, so we ask \emph{what is it resilient against?} To prevent or recover from data loss or unauthorized modification, data can be replicated across multiple storage locations. The simplest case is a replicated database (i), but if the system also permits monitoring, replication also provides resilience to state rollback. We call this a replicated monitored database (j).
-\bnote{Need to discuss the last column of this figure with Scott. How does DoS fit in, and how does the back edge from (g) to (d) provide resilience to data loss if the data isn't replicated?}
+Finally, a database can have resilience properties depending on its design, so we ask \emph{what is it resilient against?} To prevent accidental data loss (e.g., by disk corruption), data can be replicated across multiple storage locations. A replicated database (g) is the simplest such system, but without current state auditing or verifiable provenance, malicious modifications cannot be detected or recovered from. If the system allows auditing (h, i), it can detect modifications, but auditors cannot recover lost or modified data. 
+
+Decentralized data stores can have additional resilience properties when their storage is replicated across peers. A replicated, monitored database with consensus (j) can recover from malicious updates as any changes not made by consensus will be rejected by replicating peers. The peer whose data was compromised will be overruled by the majority of honest peers. If the system also stores provenance so that the full history of changes can be verified back to the origin (even by users who join the system after its genesis), it is a full blockchain (k).
+
+\bnote{Detection of modification isn't really resilience, is it? For edges c-h and d-i I think we can drop it from the figure and just mention it in the text... let the figure focus on what the system can recover from.}
+
 
 \subsection{Challenges and limitations}
 \label{subsec:challenges}
