--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -122,17 +122,17 @@ Based on these interconnections, concepts were divided into five different categ
 While we divide the concepts into five categories, the individual concepts between these categories were highly connected to each other.
 Images of these category graphs can be found in Figure~\ref{fig:grounded-theory-main}~and~\ref{fig:grounded-theory-apps} .
 
-\begin{figure*}
-	\includegraphics[width=\textwidth]{img/grounded-theory-main}
-	\label{fig:grounded-theory-main}
-	\caption{Category Map for Blockchain Technology.}
-\end{figure*}
-
-\begin{figure*}
-	\includegraphics[width=\textwidth]{img/grounded-theory-apps}
-	\label{fig:grounded-theory-apps}
-	\caption{Use Case Map for Blockchain Technology.}
-\end{figure*}
+%\begin{figure*}
+%	\includegraphics[width=\textwidth]{img/grounded-theory-main}
+%	\label{fig:grounded-theory-main}
+%	\caption{Category Map for Blockchain Technology.}
+%\end{figure*}
+%
+%\begin{figure*}
+%	\includegraphics[width=\textwidth]{img/grounded-theory-apps}
+%	\label{fig:grounded-theory-apps}
+%	\caption{Use Case Map for Blockchain Technology.}
+%\end{figure*}
 
 At this stage of the research, we allowed researcher expertise to begin influencing the results.
 First, by its very nature drawing connections between concepts is subjective.
